--- a/payments/templates/payments/organization_detail.html
+++ b/payments/templates/payments/organization_detail.html
@@ -2,19 +2,29 @@
 {% load static %}
 {% block content %}
 {% if user %}
-<div class="row">
+
+<div class="row service-detail-row">
     <div class="col service-detail">
         <div class="row">
+
+            <!--Title-->
             <div class="col service-title text-left">
-                <div class="col title">
-                    <span class="">{{ organization.title }}</span>
+                <span class="">{{ organization.title }}</span>
+            </div>
+
+            <!--Options-->
+            <div id="options" class="options">
+                <!--Archive icon-->
+                <div class="archive"><a href="{% url 'payment_archive_url' organization.slug %}">
+                    <img src="{% static 'payments/media/img/icons/archive-1.png' %}" style="height: 25px; width: auto;">
+                    </a>
                 </div>
-                <div class="archive"><a href="{% url 'payment_archive_url' organization.slug %}"><i
-                        class="fas fa-archive" style="font-size: 25px"></i></a></div>
-                <div class="dropdown dotted-menu">
+
+                <!--Dropdown dotted menu-->
+                <div class="dropdown dotted-menu text-right">
                     <button class="dotted-menu" type="button" id="dropdownMenu2" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                        <svg width="1em" height="0.8em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical"
+                        <svg width="1em" height="0.9em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical"
                              fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
                                   d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
@@ -32,13 +42,16 @@
                 </div>
             </div>
         </div>
-
         <div class="info-wrapper text-left">
             <div class="info">
-                <p>Tariff<span class="info-values">{{ organization.tariff }}<span class="values-units">
+
+                <!--Tariff-->
+                 <p>Tariff<span class="info-values">{{ organization.tariff }}<span class="values-units">
                                 hrn</span></span></p>
                 {% comment %} <p>Units<span class="info-values">{{ organization.measurement_units }}</span></p>
                 {% endcomment %}
+
+                <!--Counter values-->
                 {% if last_payment.current_counter_value %}
                 <p>Counter<span class="info-values">{{ last_payment.current_counter_value }}<span
                         class="values-units"> {{ organization.measurement_units }}</span></span>
@@ -48,15 +61,10 @@
         </div>
         {% comment %} <p>Name: {{ user.last_name }} {{ user.first_name }}. {{ user.surname }}</p>
         {% endcomment %}
-
     </div>
 </div>
 <div class="new-payment-button">
     <a href="{% url 'payment_create_url' organization.slug %}" class="btn btn-primary mt-5">New payment</a>
-</div>
-{% else %}
-<div class="data-button">
-    <a href="{% url 'custom_profile_url' %}" class="btn btn-secondary">Enter personal data</a>
 </div>
 {% endif %}
 {% endblock %}
