--- a/payments/templates/payments/base.html
+++ b/payments/templates/payments/base.html
@@ -35,7 +35,7 @@
 
 <body>
     {% include 'payments/header.html' %}
-    <div class="container-fluid" id="ajax-response-here">
+    <div class="container-fluid">
         {% block content %}
         {% endblock %}
     </div>
